lots of auto-generated snippet goodness

--- a/auto-generated-yas-cocktail-mode/add_to_latex.tex
+++ b/auto-generated-yas-cocktail-mode/add_to_latex.tex
@@ -1,5 +1,39 @@
-%% strain-c: strain into a coupe
-%% strain-co: strain into an ice-filled Collins glass
-%% strain-ofg: strain into an old fashioned glass
-%% strain-iofg: strain into an ice-filled old fashioned glass
-%% strain-Iofg: strain into an old fashioned glass with a single large ice cube
+%% SI: \SI{${1:(num)}}{${2:(unit)}} $0
+%% si: \si{$1} $0
+%% --: \item \SI{${1:(num)}}{${2:\oz}} $0
+%% inline: \InlineCocktail{${1:(name)}} $0
+%% inline*: \InlineCocktail*{${1:(name)}} $0
+%% book: \BookTitle{${1:(title)}} $0
+%% stir: Stir ingredients with ice, $0
+%% stex: Stir ingredients except {${1:<ingredient>}} with ice, $0
+%% shake: Shake ingredients with ice, $0
+%% shex: Shake ingredients except {${1:<ingredient>}} with ice, $0
+%% strc: strain into a coupe
+%% strco: strain into an ice-filled Collins glass
+%% strconi: strain into a Collins glass
+%% stro: strain into an old fashioned glass
+%% strio: strain into an ice-filled old fashioned glass
+%% strIo: strain into an old fashioned glass with a single large ice cube
+%% strf: strain into a champagne flute
+%% tops: top with \soda
+%% topc: top with champagne
+%% gnw: garnish with $0
+%% gnlet: garnish with a lemon twist.
+%% gnot: garnish with an orange twist.
+%% gntot: garnish with a thick orange twist.
+%% gnch: garnish with a cherry.
+%% gnlew: garnish with a lemon wheel.
+%% gnliw: garnish with a lime wheel.
+%% gnow: garniwh with an orange wheel.
+%% gngfw: garnish with a grapefruit wheel.
+%% gnms: garnish with a sprig of mint.
+%% gnles: garnish with a lemon slice.
+%% gnlis: garnish with a lime slice.
+%% ofg: old fashioned glass
+%% rocks: old fashioned glass
+%% benedictine: B\'en\'edictine
+%% bene: B\'en\'edictine
+%% angostura: Angostura bitters
+%% ango: Angostura bitters
+%% curacao: cura\c cao
+%% cachaca: cacha\c ca
