--- a/auto-generated-yas-cocktail-mode/add_to_latex.tex
+++ b/auto-generated-yas-cocktail-mode/add_to_latex.tex
@@ -5,11 +5,11 @@
 %% inline*: \InlineCocktail*{${1:(name)}} $0
 %% book: \BookTitle{${1:(title)}} $0
 %% stir: Stir ingredients with ice, $0
-%% stex: Stir ingredients except {${1:<ingredient>}} with ice, $0
+%% stex: Stir ingredients except ${1:<ingredient>} with ice, $0
 %% shake: Shake ingredients with ice, $0
-%% shex: Shake ingredients except {${1:<ingredient>}} with ice, $0
+%% shex: Shake ingredients except ${1:<ingredient>} with ice, $0
 %% dshake: Dry shake ingredients, then shake with ice, $0
-%% dshex: Dry shake ingredients except {${1:<ingredient>}}, then shake with ice, $0
+%% dshex: Dry shake ingredients except ${1:<ingredient>}, then shake with ice, $0
 %% strc: strain into a coupe
 %% strco: strain into an ice-filled Collins glass
 %% strconi: strain into a Collins glass
