added a few snippets

--- a/auto-generated-yas-cocktail-mode/add_to_latex.tex
+++ b/auto-generated-yas-cocktail-mode/add_to_latex.tex
@@ -1,6 +1,8 @@
 %% SI: \SI{${1:(num)}}{${2:(unit)}} $0
 %% si: \si{$1} $0
 %% --: \item \SI{${1:(num)}}{${2:\oz}} $0
+%% adash: a~\si{\dash} $0
+%% dashes: ${1:(num)}~\si{\dashes} $0
 %% inline: \InlineCocktail{${1:(name)}} $0
 %% inline*: \InlineCocktail*{${1:(name)}} $0
 %% book: \BookTitle{${1:(title)}} $0
@@ -37,5 +39,15 @@
 %% bene: B\'en\'edictine
 %% angostura: Angostura bitters
 %% ango: Angostura bitters
+%% angor: Angostura orange bitters
+%% peychauds: Peychaud's bitters
+%% pey: Peychaud's bitters
+%% orbit: orange bitters
+%% rorbit: Regan's orange bitters
+%% forbit: Fee Brother's orange bitters
 %% curacao: cura\c cao
 %% cachaca: cacha\c ca
+%% oj: orange juice
+%% lej: lemon juice
+%% lij: lime juice
+%% ss: simple syrup
