forgot about some grapefruit stuff

--- a/auto-generated-yas-cocktail-mode/add_to_latex.tex
+++ b/auto-generated-yas-cocktail-mode/add_to_latex.tex
@@ -24,6 +24,7 @@
 %% gnw: garnish with $0
 %% gnlet: garnish with a lemon twist.
 %% gnot: garnish with an orange twist.
+%% gngt: garnish with a grapefruit twist.
 %% gntot: garnish with a thick orange twist.
 %% gnch: garnish with a cherry.
 %% gnlew: garnish with a lemon wheel.
@@ -50,4 +51,5 @@
 %% oj: orange juice
 %% lej: lemon juice
 %% lij: lime juice
+%% gfj: grapefruit juice
 %% ss: simple syrup
