--- a/auto-generated-yas-cocktail-mode/add_to_latex.tex
+++ b/auto-generated-yas-cocktail-mode/add_to_latex.tex
@@ -3,6 +3,8 @@
 %% --: \item \SI{${1:(num)}}{${2:\oz}} $0
 %% adash: a~\si{\dash} $0
 %% dashes: ${1:(num)}~\si{\dashes} $0
+%% spritz: a~\si{\spritz} $0
+%% rinse: a~\si{\rinse} $0
 %% inline: \InlineCocktail{${1:(name)}} $0
 %% inline*: \InlineCocktail*{${1:(name)}} $0
 %% book: \BookTitle{${1:(title)}} $0
@@ -36,8 +38,8 @@
 %% gnlis: garnish with a lime slice.
 %% ofg: old fashioned glass
 %% rocks: old fashioned glass
-%% benedictine: B\'en\'edictine
-%% bene: B\'en\'edictine
+%% benedictine: B\\'en\\'edictine
+%% bene: B\\'en\\'edictine
 %% angostura: Angostura bitters
 %% ango: Angostura bitters
 %% angor: Angostura orange bitters
