auto-rinsed coupes and rocks glasses!

--- a/auto-generated-yas-cocktail-mode/add_to_latex.tex
+++ b/auto-generated-yas-cocktail-mode/add_to_latex.tex
@@ -15,9 +15,11 @@
 %% dshake: Dry shake ingredients, then shake with ice, $0
 %% dshex: Dry shake ingredients except ${1:<ingredient>}, then shake with ice, $0
 %% strc: strain into a coupe
+%% strcr: strain into a ${1:(rinse)}-rinsed coupe
 %% strco: strain into an ice-filled Collins glass
 %% strconi: strain into a Collins glass
 %% stro: strain into an old fashioned glass
+%% stror: strain into a ${1:(rinse)}-rinsed old fashiond glass
 %% strio: strain into an ice-filled old fashioned glass
 %% strIo: strain into an old fashioned glass with a single large ice cube
 %% strf: strain into a champagne flute
